# spotlight

./: .gitignore  dev-boost  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_user_sites.py
core/: settings.py  urls.py  wsgi.py
spotlight/: settings.py  urls.py  wsgi.py
spotlights/: admin.py  apps.py  filters_sets.py  forms.py  models.py  related_field.py  serializers.py  services.py  urls.py  views.py
spotlights/migrations/: 0001_initial.py  0002_auto_20200321_1834.py  0002_auto_20200324_1137.py  0003_auto_20200324_1205.py  0003_news_section.py  0004_auto_20200321_2219.py  0005_auto_20200322_1225.py  0006_layout_site.py  0007_news_layout.py  0008_news_image.py  0009_relatednews.py  0010_auto_20200323_1001.py  0011_remove_news_supersede.py  0012_auto_20200323_2007.py  0013_auto_20200323_2024.py  0014_auto_20200323_2129.py  0015_auto_20200323_2133.py  0016_auto_20200323_2147.py  0017_auto_20200323_2214.py  0018_auto_20200323_2220.py  0019_auto_20200323_2228.py
spotlights/static/js/: custom.js  layoutform.js  newsform.js  newspageform.js  panelform.js
